# wavis-public

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Cargo.toml  LICENSE  README.md  codemagic.yaml  deny.toml  docker-compose.prod.yml  docker-compose.rds.yml  docker-compose.yml  temp.md  wavis.code-workspace
clients/cli-test/: Cargo.toml
clients/cli-test/src/: lib.rs  main.rs
clients/cli-test/tests/: cli_tests.rs
clients/shared/: Cargo.toml
clients/shared/proptest-regressions/: audio_pipeline.txt  cpal_audio.txt  denoise_filter.txt  livekit_connection.txt  livekit_video.txt  resampler.txt  room_session.txt
clients/shared/src/: audio.rs  audio_buffer.rs  audio_meter.rs  audio_mixer.rs  audio_network_monitor.rs  audio_pipeline_mock.rs  audio_pipeline_real.rs  call_session.rs  cpal_audio.rs  cpal_device.rs  denoise_filter.rs  ice_config.rs  lib.rs  livekit_audio_mixing.rs  livekit_connection.rs  livekit_network_monitor.rs  livekit_video.rs  peer_volumes.rs  resampler.rs  sdp_ice_guards.rs  signaling.rs  webrtc.rs  webrtc_apm.rs  webrtc_backend.rs  webrtc_loops.rs  webrtc_tests.rs
clients/shared/src/audio_pipeline/: audio_pipeline_config.rs  bitrate_controller.rs  jitter_buffer.rs  mod.rs
clients/shared/src/room_session/: mod.rs  participants.rs  screen_share.rs  tests.rs
clients/shared/tests/: full_call_flow_integration.rs
clients/wavis-client/: Cargo.toml  README.md
clients/wavis-client/proptest-regressions/: output.txt
clients/wavis-client/src/: commands.rs  main.rs  output.rs  repl.rs
clients/wavis-gui/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
clients/wavis-gui/src-tauri/capabilities/: default.json
clients/wavis-gui/src-tauri/icons/: icon.icns
clients/wavis-gui/src-tauri/proptest-regressions/: audio_capture.txt
clients/wavis-gui/src-tauri/src/: audio_capture.rs  bug_report.rs  debug_env.rs  diagnostics.rs  main.rs  media.rs  native_mic.rs  portal_auth.rs  screen_capture.rs  share_sources.rs  tray.rs
scripts/ws-sfu-test/: Cargo.toml
scripts/ws-sfu-test/src/: main.rs
shared/: Cargo.toml
shared/fuzz/: Cargo.toml
shared/fuzz/fuzz_targets/: fuzz_signaling_parse.rs
shared/proptest-regressions/signaling/: tests.txt
shared/src/: lib.rs
shared/src/signaling/: mod.rs  proptest_support.rs  tests.rs  validation.rs
tools/gui-surface-test/: Cargo.toml
tools/gui-surface-test/src/: channel_ops.rs  client.rs  harness_context.rs  main.rs  results.rs  runner.rs
tools/gui-surface-test/src/scenarios/: auth_flow.rs  channel_detail_concurrency.rs  channel_detail_mutations.rs  channel_detail_read.rs  channel_detail_role_matrix.rs  channel_lifecycle.rs  error_edges.rs  media_reconnect.rs  media_token.rs  mod.rs  mute_sync.rs  screen_share_lifecycle.rs  voice_room_host.rs  voice_room_participants.rs  voice_room_reconnect.rs  voice_room_share.rs  voice_status.rs  volume_control.rs
tools/stress/: Cargo.toml
tools/stress/src/: assertions.rs  client.rs  config.rs  log_capture.rs  main.rs  process_stats.rs  results.rs  runner.rs  server.rs
tools/stress/src/scenarios/: auth_brute_force.rs  auth_state_machine_race.rs  authz_fuzz.rs  brute_force_invite.rs  chat_authz_fuzz.rs  chat_flood.rs  cross_room_invite.rs  cross_secret_token_confusion.rs  host_directed_stop.rs  idle_connection_flood.rs  mod.rs  (+18 more)
wavis-backend/: BACKEND_FIRST_STEPS.md  Cargo.toml  Dockerfile
wavis-backend/fuzz/: Cargo.toml
wavis-backend/fuzz/fuzz_targets/: fuzz_state_machine.rs
wavis-backend/migrations/: 001_create_users.sql  002_create_refresh_tokens.sql  003_create_consumed_refresh_tokens.sql  004_create_channels.sql  005_create_channel_memberships.sql  006_create_channel_invites.sql  007_add_session_epoch.sql  008_add_phrase_and_recovery_id.sql  009_create_devices.sql  010_backfill_devices.sql  011_migrate_refresh_tokens_to_device.sql  012_create_pairings.sql  013_drop_legacy_device_name.sql  014_create_chat_messages.sql
wavis-backend/proptest-regressions/domain/: join_rate_limiter.txt  jwt.txt  screen_share.txt
wavis-backend/proptest-regressions/handlers/: ws.txt
wavis-backend/proptest-regressions/ws/: ws.txt
wavis-backend/src/: app_state.rs  config_validation.rs  connections.rs  ec2_control.rs  error.rs  ip.rs  lib.rs  main.rs  redaction.rs  state.rs
wavis-backend/src/abuse/: abuse_metrics.rs  global_rate_limiter.rs  ip_tracker.rs  join_rate_limiter.rs  mod.rs  temp_ban.rs
wavis-backend/src/auth/: auth.rs  auth_rate_limiter.rs  device.rs  extractor.rs  jwt.rs  mod.rs  pairing.rs  phrase.rs  recovery_rate_limiter.rs  routes.rs
wavis-backend/src/channel/: channel.rs  channel_models.rs  channel_rate_limiter.rs  invite.rs  mod.rs  routes.rs
wavis-backend/src/chat/: chat.rs  chat_persistence.rs  chat_rate_limiter.rs  mod.rs
wavis-backend/src/diagnostics/: bug_report.rs  bug_report_rate_limiter.rs  llm_client.rs  mod.rs  routes.rs  test_metrics.rs
wavis-backend/src/voice/: livekit_bridge.rs  mock_sfu_bridge.rs  mod.rs  relay.rs  screen_share.rs  sfu_bridge.rs  sfu_relay.rs  sfu_sdp.rs  turn_cred.rs  voice_orchestrator.rs
wavis-backend/src/ws/: mod.rs  validation.rs  ws.rs  ws_dispatch.rs  ws_rate_limit.rs  ws_session.rs
wavis-backend/tests/: abuse_controls_integration.rs  auth_integration.rs  authorization_matrix_integration.rs  backend_restart.rs  channel_integration.rs  channel_rest_integration.rs  cleanup_integration.rs  concurrency.rs  create_room_integration.rs  device_integration.rs  display_name_integration.rs  invite_lifecycle_integration.rs  jwt_validation.rs  livekit_e2e_integration.rs  no_sensitive_logs.rs  p2p_relay_integration.rs  pairing_integration.rs  phase3_manual_tests_integration.rs  readme_manual_tests_integration.rs  reconnect_drop_matrix.rs  recovery_integration.rs  screen_share_integration.rs  screen_share_ws_integration.rs  security_hardening_integration.rs  sfu_relay_integration.rs  signaling_relay_integration.rs  test_metrics_integration.rs  turn_credentials_integration.rs  voice_orchestration_integration.rs  voice_ws_integration.rs  ws_auth_integration.rs
(+269 files in other folders)
