[package]
name = "shared"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"

[features]
# Feature flag to enable proptest support for testing in dependent crates
proptest-support = ["proptest"]
