[package]
name = "wavis-backend"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
test-metrics = []
concurrency-stress = []
test-support = []

[[bin]]
name = "wavis-backend"
path = "src/main.rs"

[lib]
name = "wavis_backend"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
shared = { path = "../shared" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = { version = "1", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
jsonwebtoken = "9"
livekit-api = { version = "0.4", features = ["native-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
ipnet = "2"
argon2 = "0.5"
aes-gcm = "0.10"
reqwest = { version = "0.12", features = ["json"] }
zeroize = { version = "1", features = ["derive"] }
dotenvy = "0.15"

[dev-dependencies]
proptest = "1"
shared = { path = "../shared", features = ["proptest-support"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
