[package]
name = "wavis-cli-test"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "wavis-cli-test"
path = "src/main.rs"

[lib]
name = "wavis_cli_test"
path = "src/lib.rs"

[dependencies]
wavis-client-shared = { path = "../shared", features = ["real-backends"] }
shared = { path = "../../shared" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
serde_json = "1"
log = "0.4"
env_logger = "0.11"
url = "2"

[features]
default = []
livekit = ["wavis-client-shared/livekit"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
proptest = "1"
