[package]
name = "wavis-client-shared"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
webrtc = "0.11"
rtcp = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
shared = { path = "../../shared" }

# Real audio/webrtc backends (optional, behind feature flag)
cpal = { version = "0.15", optional = true }
tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }
log = "0.4"
bytes = { version = "1", optional = true }
webrtc-media = { version = "0.8", optional = true }
audiopus = { version = "0.2", optional = true }
rubato = { version = "~0.16", optional = true }
nnnoiseless = { version = "0.5", optional = true }
livekit = { version = "0.7", optional = true, features = ["native-tls"] }
libwebrtc = { version = "0.3.26", optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1"
shared = { path = "../../shared", features = ["proptest-support"] }

[features]
default = []
resampler = ["rubato"]
real-backends = ["cpal", "tokio", "bytes", "webrtc-media", "audiopus", "rubato", "nnnoiseless"]
webrtc-audio-processing = ["dep:libwebrtc"]
livekit = ["dep:livekit", "dep:tokio-stream", "tokio"]
