[package]
name = "ws-sfu-test"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "ws-sfu-test"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1"
