[package]
name = "gui-surface-test"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "gui-surface-test"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
