[package]
name = "stress-harness"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "stress-harness"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
thiserror = "1"
axum = { version = "0.8", features = ["ws"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
wavis-backend = { path = "../../wavis-backend", features = ["test-metrics", "test-support"] }
shared = { path = "../../shared" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[features]
test-metrics = []
