[package]
name = "wavis-backend-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
shared = { path = "../../shared" }

# Prevent this from being included in the workspace
[workspace]

[[bin]]
name = "fuzz_state_machine"
path = "fuzz_targets/fuzz_state_machine.rs"
test = false
doc = false
